Bug 208444 - "Send Message" using "Enter" key is not working
Summary: "Send Message" using "Enter" key is not working
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: 0.80.2
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-24 23:55 UTC by Kde
Modified: 2010-04-01 03:47 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Kde 2009-09-24 23:55:42 UTC
Version:           0.80.2 (using KDE 4.3.1)
OS:                Linux
Installed from:    SuSE RPMs

I have "Send Message" configured to respond to the "Return" key as a primary shortcut and "Enter" (numpad enter) as the alternate shortcut.

Observed behavior using this configuration:
When I press "Enter" in a chat window, a line break is added to my chat message and the message is not sent.

Expected behavior using this configuration:
When I press "Enter" in a chat window, the chat message should be sent.
Comment 1 Mirza 2009-12-06 17:10:17 UTC
I have the same problem on freshly installed Kubuntu 9.10 with latest KDE 4.3.4
Comment 2 Roman Jarosz 2009-12-23 23:18:40 UTC
SVN commit 1065637 by rjarosz:

Use also alternative (all) shortcut for sending text in the textedit.

BUG: 208444



 M  +1 -1      kopetechatwindow.cpp  
 M  +9 -6      kopeterichtextwidget.cpp  
 M  +1 -1      kopeterichtextwidget.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1065637
Comment 3 Unknown 2010-04-01 03:47:41 UTC
This problem persists for me in Kopete 1.0.0 KDE version 4.4.2. Is the fixed mentioned above merged in trunk already?