Use also alternative (all) shortcut for sending text in the textedit.

BUG: 208444


svn path=/trunk/KDE/kdenetwork/kopete/; revision=1065637