kopete/chatwindow/kopeterichtextwidget.h
@@ -76,7 +76,7 @@ public Q_SLOTS:
     void setTextItalic(bool italic);
     void setTextUnderline(bool underline);
     void setTextStrikeOut(bool strikeout);
-    void setSendKeySequence(QKeySequence keySequence);
+    void setSendKeySequenceList(const QList<QKeySequence>& keySequenceList);
 
     void slotResetFontAndColor();
     void slotCheckSpellingChanged(bool b);
